<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.ac.hfcas.sight.activity.RegisterActivity">

    <Button
        android:id="@+id/weight"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <Button
        android:id="@+id/sight"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@+id/weight"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <Button
        android:id="@+id/vision_problem"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@+id/sight"
        app:layout_constraintTop_toBottomOf="@+id/sight" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:padding="5dp"
        android:text="@string/height"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/height"
        app:layout_constraintLeft_toLeftOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/height" />

    <android.support.design.widget.TextInputLayout
        android:focusableInTouchMode="true"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/textInputLayout">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/textInputLayout2">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        android:id="@+id/textInputLayout3">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="number|phone" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:padding="5dp"
        android:text="@string/sex"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintLeft_toLeftOf="@+id/textInputLayout3"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.5"
        android:id="@+id/textView10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:padding="5dp"
        android:text="@string/age"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/textView10"
        android:id="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/age"
        app:layout_constraintBottom_toBottomOf="@+id/age"
        android:layout_marginBottom="0dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"
            android:textAlignment="center"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/age"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/height"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@+id/age"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:padding="5dp"
        android:text="@string/weight"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/weight"
        app:layout_constraintLeft_toLeftOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/weight"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:padding="5dp"
        android:text="@string/sight"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/sight"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/sight"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:padding="5dp"
        android:text="@string/vision_problem"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/vision_problem"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/vision_problem"
        android:id="@+id/textView3" />

    <Button
        android:id="@+id/register"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/register"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vision_problem" />

</android.support.constraint.ConstraintLayout>
