<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/resultbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.ac.hfcas.sight.activity.ResultActivity">

    <TextView
        android:id="@+id/test_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/test_result"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/road_one"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/road_one"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_result" />

    <TextView
        android:id="@+id/road_two"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/road_two"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/road_one" />

    <TextView
        android:id="@+id/road_three"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/road_three"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/road_two" />

    <TextView
        android:id="@+id/road_four"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/road_four"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/road_three" />

    <TextView
        android:id="@+id/road_five"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/road_five"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/road_four" />

    <TextView
        android:id="@+id/road_six"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/road_six"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/road_five" />

    <TextView
        android:id="@+id/exercise_evaluation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/exercise_evaluation"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/road_six" />

    <TextView
        android:id="@+id/report"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/report_text_corner"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black_overlay"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_evaluation" />

    <TextView
        android:id="@+id/horizontal_result"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="0dp"
        android:textAlignment="center"
        android:background="@drawable/test_result_corner"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/road_one"
        app:layout_constraintLeft_toRightOf="@+id/road_one"
        app:layout_constraintTop_toTopOf="@+id/road_one" />

    <TextView
        android:id="@+id/vertiacl_result"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="0dp"
        android:textAlignment="center"
        android:background="@drawable/test_result_corner"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/road_two"
        app:layout_constraintLeft_toRightOf="@+id/road_two"
        app:layout_constraintTop_toTopOf="@+id/road_two" />

    <TextView
        android:id="@+id/slope_up_result"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/test_result_corner"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/road_three"
        app:layout_constraintLeft_toRightOf="@+id/road_three"
        app:layout_constraintTop_toTopOf="@+id/road_three" />

    <TextView
        android:id="@+id/slope_down_result"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="0dp"
        android:textAlignment="center"
        android:background="@drawable/test_result_corner"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/road_four"
        app:layout_constraintLeft_toRightOf="@+id/road_four"
        app:layout_constraintTop_toTopOf="@+id/road_four" />

    <TextView
        android:id="@+id/clockwise_result"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="0dp"
        android:textAlignment="center"
        android:background="@drawable/test_result_corner"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/road_five"
        app:layout_constraintLeft_toRightOf="@+id/road_five"
        app:layout_constraintTop_toTopOf="@+id/road_five" />

    <TextView
        android:id="@+id/anticlockwise_result"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/test_result_corner"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/road_six"
        app:layout_constraintLeft_toRightOf="@+id/road_six"
        app:layout_constraintTop_toTopOf="@+id/road_six" />
</android.support.constraint.ConstraintLayout>
